# pyfri

./: CMakeLists.txt  patch_fri_static.cmake  setup.py
examples/: LBRJointSineOverlay.py
pyfri/src/: wrapper.cpp
